fixed scrollbar appearing on abilities. Now to add skills.

--- a/styles/styleNumenera.scss
+++ b/styles/styleNumenera.scss
@@ -382,6 +382,7 @@ $ff-indie: 'Patrick Hand';
 		flex-direction: column;
 		justify-content: stretch;
 		width: 100%;
+		overflow: visible;
 	}
 
 	#stats {
@@ -474,14 +475,17 @@ $ff-indie: 'Patrick Hand';
 		background-color: $clr-panel;
 		border-radius: 5px;
 		padding: 0.2rem;
-		// min-height: 100%;
 
 		
+	}
+	.--extended{
+		min-height: 100%;
+		overflow: visible;
 	}
 
 	.panel-overlay{
 		border-radius: 5px;
-		background-image: linear-gradient(top,
+		background: linear-gradient(top,
 				rgba(255, 255, 255, 0) 0%,
 				rgba(255, 255, 255, 0) 60%,
 				rgba(236, 222, 209, 0.9) 70%,
